--- a/A5/Activitat5/index.html
+++ b/A5/Activitat5/index.html
@@ -25,7 +25,7 @@
         <h2>Descobreix més sobre Ilyass Khaleq</h2>
         <section class="seccio-dinamica" onmouseover="mostrarText(this)" onmouseout="ocultarText(this)">
             <h3>Història del Jugador</h3>
-            <p class="text-ocult">Ilyass Khaleq és un jugador destacat del filial del CF La Sènia. Amb només 20 anys, ja ha captivat l'atenció del futbol regional amb el seu talent i dedicació.</p>
+            <p class="text-ocult">Ilyass Khaleq és un jugador destacat del filial del CF La Sènia. Amb només 18 anys</p>
         </section>
     </main>
 
